<resources>
    <string name="app_name">desafioFirebase_Sarah</string>
    <string name="login_email">Email</string>
    <string name="login_senha">Password</string>
    <string name="login_button">LOG IN</string>
    <string name="login_checkbox">Remember</string>
    <string name="login_cadastro">Create account</string>
    <string name="cadastro_name">Name</string>
    <string name="cadastro_email">Email</string>
    <string name="cadastro_senha">Password</string>
    <string name="cadastro_conf_senha">Repeate password</string>
    <string name="cadastro_button">CREATE ACCOUNT</string>
    <string name="game_name">Name</string>
    <string name="game_created_at">Created  at</string>
    <string name="game_desc">Description</string>
    <string name="game_button">SAVE GAME</string>
</resources>